--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.2",
-    "next": "12.3.1",
+    "lucide-react": "^0.94.0",
+    "next": "^12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -18,7 +19,7 @@
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8"
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
